bug fixes for contract

--- a/src/pages/MiningPoints/components/PointLists/point-lists.scss
+++ b/src/pages/MiningPoints/components/PointLists/point-lists.scss
@@ -4,3 +4,16 @@
     color: #000 !important;
     font-weight: 600 !important;
 }
+
+.collection-wrap {
+    padding: 6px 12px;
+    border-radius: 10px;
+    border: none;
+    background-color: white;
+    color: #6164ff;
+    font-family: Audiowide ;
+}
+
+.collection-wrap:hover {
+    background-color: white;
+}
