--- a/src/pages/Home/components/ActionFeed/action-feed.scss
+++ b/src/pages/Home/components/ActionFeed/action-feed.scss
@@ -27,6 +27,7 @@
         .slider-content {
             padding: 12px 16px;
             border-radius: 16px;
+            // display: flex;
         }
     }
 }
