--- a/src/components/Wheel/wheel.scss
+++ b/src/components/Wheel/wheel.scss
@@ -1,81 +1,118 @@
+$wheel-font: 'Lato', 'Quicksand', sans-serif;
+$wheel-size: 300px;
+$wheel-slice-spacing: 50px;
+$wheel-border-size: 5px;
+$wheel-color: #da3768;
+$neutral-color: white;
+$PI: 3.14159265358979;
+$nb-item: 0;
+$item-nb: 0;
+$selected-item: 0;
+$nb-turn: 5;
+$spinning-duration: 20s;
+$reset-duration: 0.25s;
+ // Wheel Container
 .wheel-container {
-    position: relative;
-
-    &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        background-color: #16151a;
-        border: 3px solid #fff;
-        width: 40px;
-        height: 40px;
-        z-index: 2;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 50%;
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        border-width: 15px;
-        border-style: solid;
-        border-color: transparent transparent #16151a;
-        border-image: initial;
-        top: calc(50% - 22px);
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 3;
-    }
-
-    .wheel {
-        display: block;
-        box-sizing: content-box;
-        width: 200px;
-        height: 200px;
-        overflow: hidden;
-        padding: 3px;
-        margin: auto;
-        border: 4px solid #96e8ff;
-        border-radius: 50%;
-        user-select: none;
-        transition: transform 0.25s;
-        cursor: pointer;
-
-        .wheel-item {
-            display: block;
-            position: absolute;
-            box-sizing: border-box;
-
-            top: 50%;
-            left: 50%;
-            width: 50%;
-            transform-origin: center left;
-
-            color: black;
-            text-align: right;
-            padding: 0 25px 0 50px;
-
-            &::before {
-                content: ' ';
-                display: block;
-                position: absolute;
-                box-sizing: border-box;
-                z-index: -1;
-                width: 0;
-                height: 0;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                padding-left: 0px;
-                // opacity: 0.25;
-                --sin: 0.15643446504023087;
-                border-top: calc(var(--sin) * 220px) solid transparent;
-                border-bottom: calc(var(--sin) * 220px) solid transparent;
-                border-right-width: 102px;
-                border-right-style: solid;
-            }
-        }
-    }
+  display: block;
+  position: relative;
+  box-sizing: content-box;
+  width: calc(#{$wheel-size} + 2 * #{$wheel-border-size});
+  height: calc(#{$wheel-size} + 2 * #{$wheel-border-size});
+  padding: 3px;
+  margin: auto;
+  background-color: $neutral-color;
+  border: solid $wheel-color 3px;
+  border-radius: 50%;
+  user-select: none;
+   // Triangle Selection
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+    border: solid transparent 20px;
+    border-left-width: 0;
+  }
+   &::before {
+    right: 0px;
+    border-right-color: $wheel-color;
+  }
+   &::after {
+    right: -5px;
+    border-right-color: $neutral-color;
+  }
+}
+ // Wheel
+.wheel {
+  display: block;
+  position: relative;
+  box-sizing: content-box;
+  margin: auto;
+  width: $wheel-size;
+  height: $wheel-size;
+  overflow: hidden;
+  border-radius: 50%;
+  border: solid $wheel-color $wheel-border-size;
+  background-color: $wheel-color;
+  transition: transform $reset-duration;
+  transform: rotate(0deg);
+  cursor: pointer;
+   &.spinning {
+    transition: transform $spinning-duration;
+    transform: rotate(calc(#{$nb-turn} * 360deg + (-360deg * #{$selected-item} / $nb-item)));
+  }
+   // Center of the Wheel
+  &::after {
+    display: block;
+    position: absolute;
+    content: '';
+    background-color: $neutral-color;
+    width: 25px;
+    height: 25px;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+  }
+}
+ // Wheel Item
+.wheel-item {
+  display: block;
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  transform-origin: center left;
+  transform: translateY(-50%) rotate(calc(#{$item-nb} * (360deg / $nb-item)));
+  color: $neutral-color;
+  text-align: right;
+  padding: 0 25px 0 50px;
+  font-family: $wheel-font;
+   // Background
+  &:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    box-sizing: border-box;
+    z-index: -1;
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-left: 0px;
+    opacity: 0.25;
+    $slice-max-width: calc(#{$PI} * #{$wheel-size} + #{$wheel-size} / 2);
+    $slice-width: calc((#{$slice-max-width} / $nb-item) - #{$wheel-slice-spacing});
+    border: solid transparent #{$slice-width / 2};
+    border-left: solid transparent 0;
+    border-right: solid $neutral-color #{$wheel-size / 2};
+  }
 }
