--- a/src/pages/Home/components/ActionList/action-list.scss
+++ b/src/pages/Home/components/ActionList/action-list.scss
@@ -17,6 +17,7 @@
     .action-list-desc {
         background-color: #fff;
         border-radius: 16px;
+        margin-top: 100px;
         padding: 76px 32px 32px;
 
         &-item {
