Modify proton, newtron format, and make beautiful pages

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,15 +1,15 @@
 .appbar {
-    padding: 16px 0;
+    padding: 10px 0;
     box-shadow: none;
 
-    .logo {
-        display: block;
-        width: 180px;
+    // .logo {
+    //     display: block;
+    //     width: 160px;
 
-        img {
-            width: 100%;
-        }
-    }
+    //     img {
+    //         width: 100%;
+    //     }
+    // }
 
     .stakedInfo {
         font-size: 12px;
@@ -25,9 +25,9 @@
 
         .social-button {
             display: block;
-            width: 36px;
-            min-width: 36px;
-            height: 36px;
+            width: 40px;
+            min-width: 40px;
+            height: 40px;
             padding: 8px;
             border-radius: 8px;
 
@@ -40,10 +40,10 @@
 
     .menu-button {
         padding: 8px;
-        width: 36px;
-        min-width: 36px;
-        height: 36px;
+        width: 40px;
+        min-width: 40px;
+        height: 40px;
         border-radius: 8px;
-        background-color: #6164ff;
+        background-color: rgb(29, 26, 21);        
     }
 }
