--- a/src/components/Item/item.scss
+++ b/src/components/Item/item.scss
@@ -1,5 +1,6 @@
 .slick-container {
-    padding: 0 8px;
+    padding: 0 0;
+    padding-right: 16px;
     .item-container {
         position: relative;
         border-radius: 8px;
