--- a/src/pages/Home/components/ActionList/action-list.scss
+++ b/src/pages/Home/components/ActionList/action-list.scss
@@ -2,7 +2,7 @@
     margin-bottom: 96px;
 
     .carousel-content {
-        width: 90%;
+        // width: 90%;
         margin-left: auto;
         margin-right: auto;
         transform: translateY(50px);
