--- a/src/pages/Home/components/RoadMap/roadmap.scss
+++ b/src/pages/Home/components/RoadMap/roadmap.scss
@@ -36,17 +36,17 @@
         width: 90%;
         margin-left: auto;
         transform: translate(16px, -32px);
-        padding: 32px 16px;
+        padding: 20px 12px;
 
         &-title {
-            font-size: 20px;
-            font-weight: 600;
-            padding-left: 8px;
+            font-size: 18px;
+            font-weight: 600;            
             margin-bottom: 8px;
         }
 
         &-text {
-            color: #fff;
+            color: rgb(169, 168, 166);
+            font-size: 14px;
         }
     }
 }
