--- a/src/pages/Stake/components/Mining/mining.scss
+++ b/src/pages/Stake/components/Mining/mining.scss
@@ -22,17 +22,16 @@
     align-items: center;
     flex-grow: 1;
 
-    .proton-amount {
-        border: 2px solid #fff;
-        padding: 4px 16px;
+    .proton-amount {        
+        border: 1px solid rgba(255, 255, 255, 0.32);
+        padding: 8px 24px;
         border-radius: 8px;
         margin-bottom: 16px;
     }
 
     .spin-action {
-        padding: 8px 16px;
+        padding: 3px 16px;
         border-radius: 8px;
-        margin-top: 16px;
     }
 
     .mining-content {
